--- a/FixMyRideApp/app/src/main/res/values/colors.xml
+++ b/FixMyRideApp/app/src/main/res/values/colors.xml
@@ -3,7 +3,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="button_color">#191C1E</color>
+    <color name="footer_color">#191C1E</color>
     <color name="background_color">#8A9297</color>
     <color name="cardview_shadow_start_color">#FF7E99A3</color>
     <color name="text_color">#FFF4EDD3</color>
+<!--    <color name="background_color">#121212</color>-->
+    <color name="card_background">#1E1E1E</color>
+    <color name="text_primary">#FFFFFF</color>
+    <color name="text_secondary">#B3FFFFFF</color>
+    <color name="accent_color">#2196F3</color>
+    <color name="error_color">#CF6679</color>
 </resources>
